samples/_failures_safe/1761225617_b8864d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de510ddb.c: In function ‘main’:
./samples/SAFE/__tmp_de510ddb.c:129:20: error: missing terminating " character
  129 |             printf("\nEnter second matrix elements:\
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_de510ddb.c:129:13: error: expected expression at end of input
  129 |             printf("\nEnter second matrix elements:\
      |             ^~~~~~
./samples/SAFE/__tmp_de510ddb.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_de510ddb.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_de510ddb.c:129:13: error: expected declaration or statement at end of input
